# Panko-Renderer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: LICENSE.txt  caustics.gltf  cornell2.gltf  cornell3.gltf  cornell4.gltf  cornellFixed.gltf  cornellsuzanne.gltf  occluderscene.gltf  reflection_new.gltf  shtest.gltf
assets/bathroom/: bathroom.gltf
assets/bedroom/: bedroom.gltf
assets/classroom/: gltf_modified.gltf
assets/interior_scene/: license.txt  scene.gltf
assets/livingroom/: livingroom.gltf
data/: LICENSE.txt
precomputation/: precalculation.ClusterProbes  precalculation.ClusterProjectionMatrices  precalculation.ClusterReceiverInfos  precalculation.ClusterReceiverUvs  precalculation.ProbeRaycastBasisFunctions  precalculation.Probes  precalculation.cfg
precomputation/cornell_v1/: precalculation.AabbReceivers  precalculation.ClusterProjectionMatrices  precalculation.ClusterReceiverInfos  precalculation.ReceiverProbeWeightData  precalculation.cfg
precomputation/old/: precalculation.Probes  precalculation.cfg
precomputation/old3/: precalculation.ClusterProjectionMatrices  precalculation.ClusterReceiverInfos  precalculation.ClusterReceiverUvs  precalculation.Probes  precalculation.cfg
precomputation/old4/: precalculation.ClusterProjectionMatrices  precalculation.ClusterReceiverInfos  precalculation.Probes
precomputation/sponza/: precalculation.ClusterReceiverInfos  precalculation.ClusterReceiverUvs  precalculation.Probes  precalculation.cfg
shaders/: brdf.glsl  common.glsl  debug_unlit.frag  debug_unlit.frag.spv  debug_unlit.vert  debug_unlit.vert.spv  default.frag  default.frag.spv  default.vert  default.vert.spv  deferred.frag  deferred.frag.spv  diffusegi_groundtruth.rgen  diffusegi_groundtruth.rgen.spv  dilate.frag  dilate.frag.spv  evsm.frag  evsm.frag.spv  evsm.vert  evsm.vert.spv  fullscreen.vert  fullscreen.vert.spv  gamma.frag  gamma.frag.spv  gaussblur.frag  gaussblur.frag.spv  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  gi.frag  gi.frag.spv  gi.vert  gi.vert.spv  gi_cluster_projection.comp  gi_cluster_projection.comp.spv  gi_probe_projection.comp  gi_probe_projection.comp.spv  gi_probe_projection_realtime.comp  gi_probe_projection_realtime.comp.spv  (+38 more)
shaders/diffuse_lightmap_groundtruth/: diffusegi_groundtruth.rgen  diffusegi_groundtruth.rgen.spv
shaders/diffuse_probes/: gi_cluster_projection.comp  gi_cluster_projection.comp.spv  gi_probe_projection.comp  gi_probe_projection.comp.spv  gi_probe_projection_realtime.comp  gi_probe_projection_realtime.comp.spv  gi_receiver_reconstruction.comp  gi_receiver_reconstruction.comp.spv  lightmap.frag  lightmap.frag.spv  lightmap.vert  lightmap.vert.spv  proberaycast_realtime.rgen  proberaycast_realtime.rgen.spv
shaders/precomputation/: precalculate_construct_receiver_matrix.comp  precalculate_construct_receiver_matrix.comp.spv  precalculate_probe_density_weights.comp.spv  precalculate_probe_rt.rchit  precalculate_probe_rt.rchit.spv  precalculate_probe_rt.rgen  precalculate_probe_rt.rgen.spv  precalculate_probe_rt.rmiss  precalculate_probe_rt.rmiss.spv  precalculate_receiver_rt.rgen  precalculate_receiver_rt.rgen.spv  precalculate_receivers.frag.spv  precalculate_receivers.vert  precalculate_receivers.vert.spv
shaders/reflections/: reflections_rt.rchit  reflections_rt.rchit.spv  reflections_rt.rgen  reflections_rt.rgen.spv  reflections_rt.rmiss  reflections_rt.rmiss.spv
shaders/reflections_svgf/: svgf_atrous.comp  svgf_atrous.comp.spv  svgf_edge_functions.glsl  svgf_temporal.comp  svgf_temporal.comp.spv  svgf_variance.comp.spv
shaders/shadow_mapping/: evsm.frag  evsm.frag.spv  evsm.vert  evsm.vert.spv  shadow.glsl
src/: CMakeLists.txt  file_helper.h  gi_brdf.cpp  gi_brdf.h  gi_deferred.cpp  gi_deferred.h  gi_diffuse.cpp  gi_diffuse.h  gi_gbuffer.cpp  gi_gbuffer.h  gi_glossy.cpp  gi_glossy.h  gi_glossy_svgf.cpp  gi_glossy_svgf.h  gi_shadow.cpp  gi_shadow.h  gltf_scene.cpp  gltf_scene.hpp  memory.cpp  memory.h  precalculation.cpp  precalculation.h  precalculation_types.h  redsvd.h  triangle_box_intersection.h  vk_cache.h  vk_compute.cpp  vk_compute.h  vk_debug_renderer.cpp  vk_debug_renderer.h  vk_engine.cpp  vk_engine.h  vk_extensions.cpp  vk_extensions.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  (+16 more)
src/editor/: editor.cpp  editor.h
src/memory/: frame_allocator.cpp  frame_allocator.h  handle.h  handle_pool.h  slice.h
